syntax = "proto3";

package proto;

option go_package = "/api-gateway/proto;proto";

service WorkoutService {
  rpc GetWorkout (GetWorkoutRequest) returns (WorkoutResponse);
  rpc CreateWorkout (CreateWorkoutRequest) returns (WorkoutResponse);
  rpc ListWorkouts (Empty) returns (WorkoutListResponse);
}

message Empty {}

message GetWorkoutRequest {
  string id = 1;
}

message CreateWorkoutRequest {
  string id = 1;
}

message WorkoutResponse {
  string id = 1;
  string title = 2;
  int32 duration_minutes = 3;
}

message WorkoutListResponse {
  repeated WorkoutResponse workouts = 1;
}
